--- a/home/dot_config/waybar/config.tmpl
+++ b/home/dot_config/waybar/config.tmpl
@@ -83,6 +83,7 @@
         "format-ethernet": "[eth]",
         "format-linked": "[no ip]",
         "format-disconnected": "[offline]",
+        "on-click": "alacritty -e nmtui",
         "tooltip": false
     },
 
