fix(colors): replace old white with dragon grey in reverse video
Changed dragonWhite from #c5c9c5 to #a6a69c (dragon grey) in Helix theme
to ensure consistent zen aesthetic when text appears on colored backgrounds.
Also updated NEWT template references for consistency.

This ensures reverse video (like in git diffs and lazygit) shows the
softer dragon grey instead of bright white, maintaining visual harmony.

--- a/home/.chezmoitemplates/newt-colors-kanagawa.tmpl
+++ b/home/.chezmoitemplates/newt-colors-kanagawa.tmpl
@@ -10,7 +10,7 @@
      color4:  #8ba4b0 (blue)           color12: #7FB4CA (bright blue)
      color5:  #a292a3 (magenta)        color13: #938AA9 (bright magenta)
      color6:  #8ea4a2 (cyan)           color14: #7AA89F (bright cyan)
-     color7:  #C8C093 (white)          color15: #c5c9c5 (bright white)
+     color7:  #C8C093 (white)          color15: #c8c093 (bright white/oldWhite)
 */ -}}
 {{- "root=color7,color0 " -}}{{- /* Main: C8C093 on 0d0c0c */ -}}
 {{- "window=color7,color0 " -}}{{- /* Windows: C8C093 on 0d0c0c */ -}}
@@ -18,10 +18,10 @@
 {{- "shadow=color0,color8 " -}}{{- /* Shadow: 0d0c0c on a6a69c */ -}}
 {{- "title=color14,color0 " -}}{{- /* Titles: 7AA89F on 0d0c0c */ -}}
 {{- "button=color0,color6 " -}}{{- /* Buttons: 0d0c0c on 8ea4a2 */ -}}
-{{- "actbutton=color15,color4 " -}}{{- /* Active buttons: c5c9c5 on 8ba4b0 */ -}}
+{{- "actbutton=color15,color4 " -}}{{- /* Active buttons: c8c093 on 8ba4b0 */ -}}
 {{- "checkbox=color7,color0 " -}}{{- /* Checkboxes: C8C093 on 0d0c0c */ -}}
 {{- "actcheckbox=color14,color0 " -}}{{- /* Active checkbox: 7AA89F on 0d0c0c */ -}}
-{{- "entry=color15,color8 " -}}{{- /* Input fields: c5c9c5 on a6a69c */ -}}
+{{- "entry=color15,color8 " -}}{{- /* Input fields: c8c093 on a6a69c */ -}}
 {{- "label=color7,color0 " -}}{{- /* Labels: C8C093 on 0d0c0c */ -}}
 {{- "listbox=color7,color0 " -}}{{- /* List items: C8C093 on 0d0c0c */ -}}
 {{- "actlistbox=color0,color14 " -}}{{- /* Active list: 0d0c0c on 7AA89F */ -}}
@@ -34,4 +34,4 @@
 {{- "disentry=color8,color0 " -}}{{- /* Disabled: a6a69c on 0d0c0c */ -}}
 {{- "compactbutton=color7,color0 " -}}{{- /* Compact btn: C8C093 on 0d0c0c */ -}}
 {{- "actsellistbox=color0,color12 " -}}{{- /* Active+selected: 0d0c0c on 7FB4CA */ -}}
-{{- "sellistbox=color15,color4" -}}{{- /* Selected: c5c9c5 on 8ba4b0 */ -}}
+{{- "sellistbox=color15,color4" -}}{{- /* Selected: c8c093 on 8ba4b0 */ -}}
